1. Метод .of [#424177]